--- a/recipes/tacoDePescado.html
+++ b/recipes/tacoDePescado.html
@@ -24,6 +24,18 @@
         <li>1 huevo</li>
     </ul>
     
+    <h4>Salsa Blanca</h4>
+    <ul>
+        <li>1/2 taza de yogur natural</li>
+        <li>1/2 taza de mayonesa</li>
+        <li>1 lima exprimida</li>
+        <li>1 chile de jalapeño picado</li>
+        <li>1 cucharada de alcaparras picadas</li>
+        <li>1 cucharada de pimienta de cayena molida</li>
+        <li>1/2 cucharada de orégano seco</li>
+        <li>1/2 cucharada de comido molino</li>
+        <li>1/2 cucharada de eneldo seco</li>
+    </ul>
 
 
 </body>
