--- a/recipes/tacoDePescado.html
+++ b/recipes/tacoDePescado.html
@@ -37,6 +37,15 @@
         <li>1/2 cucharada de eneldo seco</li>
     </ul>
 
+    <h4>Tacos de Pescado</h4>
+    <ul>
+        <li>1 cuarto de aceite para freír</li>
+        <li>1 libra de filetes de bacalao, cortados en porciones de 2 a 3 onzas</li>
+        <li>2 cucharadas de harina para todo uso, o más según sea necesario</li>
+        <li>1 paquete (12 onzas) de tortillas de maíz</li>
+        <li>1/2 repollo meidano, finamente rallado</li>
+    </ul>
+
 
 </body>
 </html>
