Receta de Taco de pescado terminada

--- a/recipes/tacoDePescado.html
+++ b/recipes/tacoDePescado.html
@@ -46,6 +46,15 @@
         <li>1/2 repollo meidano, finamente rallado</li>
     </ul>
 
-
+    <h3>Preparación</h3>
+    <ol>
+        <li>Haga masa de cerveza: combine la harina, la maicena, el polvo para hornear y la sal en un tazón grande. Licue la cerveza y el huevo en un recipiente aparte, luego agregue rápidamente la mezcla de harina hasta que se combinen y queden algunos grumos.</li>
+        <li>Prepare salsa blanca: mezcle el yogur y la mayonesa en un tazón mediano. Agregue gradualmente el jugo de limón fresco hasta que la consistencia esté ligeramente líquida. Sazone con jalapeño, alcaparras, cayena, orégano, comino y eneldo.</li>
+        <li>Comience los tacos de pescado: Caliente el aceite en una freidora a 190 grados C.</li>
+        <li>Espolvoree ligeramente los trozos de pescado con harina. Dejar de lado.</li>
+        <li>Sumerja los trozos de pescado enharinado en la masa de cerveza. Dejar de lado.</li>
+        <li>Freír en aceite caliente hasta que estén crujientes y doradas. Escurrir sobre toallas de papel. Freír ligeramente las tortillas en aceite caliente hasta que estén crujientes, pero no demasiado. Escurrir sobre toallas de papel.</li>
+        <li>Coloca el pescado frito en las tortillas; cubra con repollo rallado y salsa blanca.</li>
+    </ol>
 </body>
 </html>
