Receta de pancakes terminada

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -17,7 +17,7 @@
     <ul>
         <li>Harina</li>
         <li>3 cucharadas de Azúcar</li>
-        <li>Levadura</li>
+        <li>Levadura, polvo de hornear y bicarbonato de sodio</li>
         <li>1 cuchara de azúcar</li>
         <li>Suero de leche</li>
         <li>Leche</li>
@@ -25,6 +25,11 @@
         <li>Manteca</li>
     </ul>
 
-    
+    <h3>Preparación</h3>
+    <ol>
+        <li>Mezcle los ingredientes secos: Combine la harina, el azúcar, el polvo de hornear, el bicarbonato de sodio y la sal en un tazón grande</li>
+        <li>Mezcle los ingredientes húmedos: Batir el suero de leche, la leche, los huevos y la mantequilla derretida en un recipiente aparte. No combine los ingredientes húmedos y secos hasta junto antes de cocinar los panqueques</li>
+        <li>Prepara los panqueques: Agrega los ingredientes húmedos a los ingredientes secos y mezcla con una cuchara de madera o tenedor hasta que las mezclas estén recién mezcladas. Coloque la masa en una plancha caliente y engrasada y cocine hasta que el panqueque esté burbujeante en la parte superior. Voltee con una espátula y cocine hasta que ambos lados estén dorados.</li>
+    </ol>
 </body>
 </html>
