--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Recetas de Odin</h1>
     <a href="recipes/tacoDePescado.html">Tacos de Pescado</a>
-    
+    <a href="recipes/pancakes.html">Pancakes</a>
 
 
 </body>
