--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Recetas de Odin</h1>
     <a href="recipes/tacoDePescado.html">Tacos de Pescado</a>
     <a href="recipes/pancakes.html">Pancakes</a>
-    <a href="recipes/Lasagna.html"></a>
+    <a href="recipes/Lasagna.html">Lasagna</a>
 
 </body>
 </html>
