Terminada Lasagna Recipe

--- a/recipes/Lasagna.html
+++ b/recipes/Lasagna.html
@@ -6,6 +6,33 @@
     <title>Lasagna</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Lasagna</h1>
+    <img src="/odin-recipes/img/Lasagna.webp" alt="">
+
+    <h3>Descripcion</h3>
+    <p>La lasaña casera no es tan difícil de hacer como parece. No se deje intimidar por todas las capas de delicioso sabor italiano: ¡pruebe esta receta de lasaña casera hoy!</p>
+
+    <h3>Ingredientes</h3>
+    <ul>
+        <li>Carne molida</li>
+        <li>Cebolla</li>
+        <li>Tomates enlatados</li>
+        <li>Hierbas frescas, dos cucharas de perejil y un diente de ajo</li>
+        <li>Albahaca seca, orégano, sal y pimienta negra</li>
+        <li>Azúcar</li>
+        <li>Fideos</li>
+        <li>Queso</li>
+        <li>Huevos</li>
+    </ul>
+
+    <h3>Preparación</h3>
+    <ol>
+        <li>Cocine la carne: Cocine la carne molida en una sartén hasta que esté dorada y desmenuzable. Agrega la cebolla y continúa cocinando hasta que esté transparente. Agregue los productos de tomate enlatados, la mitad del perejil, el ajo, la albahaca, 1.5 cucharaditas de sal, orégano y azúcar.</li>
+        <li>Cocina los fideos: Hervir los fideos de lasaña en agua ligeramente salada hasta que estén al dente.</li>
+        <li>Haga la capa de queso: Mezcle el requesón, el queso parmesano, los huevos, el perejil restante, la sal restante y la pimienta en un tazón.</li>
+        <li>Montar la lasaña: Coloque los ingredientes en capas según la receta (comenzando con salsa y terminando con mozzarella) hasta que la lasaña esté ensamblada.</li>
+        <li>Hornea la lasaña: Cubrir con papel de aluminio y hornear en el horno precalentado durante aproximadamente media hora. Retire el papel de aluminio y continúe horneando hasta que la parte superior esté dorada. En un horno precalentado a 375 grados F, esta lasaña casera debería estar perfectamente horneada en unos 50 minutos (30-40 minutos tapado, 5-10 minutos sin tapar).</li>
+    </ol>
+
 </body>
 </html>
